crates/sith_python_parser/src/snapshots/python_parser__lexer__tests__fstring_with_multiline_format_spec.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..4,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "__",
        ),
        4..6,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        Lbrace,
        6..7,
    ),
    (
        NonLogicalNewline,
        7..8,
    ),
    (
        Name(
            Name("x"),
        ),
        12..13,
    ),
    (
        Colon,
        13..14,
    ),
    (
        FStringMiddle(
            "d\n",
        ),
        14..16,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        Rbrace,
        16..17,
    ),
    (
        FStringMiddle(
            "__",
        ),
        17..19,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringEnd,
        19..22,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        Newline,
        22..23,
    ),
    (
        FStringStart,
        23..27,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "__",
        ),
        27..29,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        Lbrace,
        29..30,
    ),
    (
        NonLogicalNewline,
        30..31,
    ),
    (
        Name(
            Name("x"),
        ),
        35..36,
    ),
    (
        Colon,
        36..37,
    ),
    (
        FStringMiddle(
            "a\n        b\n          c\n",
        ),
        37..61,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        Rbrace,
        61..62,
    ),
    (
        FStringMiddle(
            "__",
        ),
        62..64,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringEnd,
        64..67,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        Newline,
        67..68,
    ),
    (
        FStringStart,
        68..70,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "__",
        ),
        70..72,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Lbrace,
        72..73,
    ),
    (
        NonLogicalNewline,
        73..74,
    ),
    (
        Name(
            Name("x"),
        ),
        78..79,
    ),
    (
        Colon,
        79..80,
    ),
    (
        FStringMiddle(
            "d",
        ),
        80..81,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        NonLogicalNewline,
        81..82,
    ),
    (
        Rbrace,
        82..83,
    ),
    (
        FStringMiddle(
            "__",
        ),
        83..85,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringEnd,
        85..86,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Newline,
        86..87,
    ),
    (
        FStringStart,
        87..89,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "__",
        ),
        89..91,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Lbrace,
        91..92,
    ),
    (
        NonLogicalNewline,
        92..93,
    ),
    (
        Name(
            Name("x"),
        ),
        97..98,
    ),
    (
        Colon,
        98..99,
    ),
    (
        FStringMiddle(
            "a",
        ),
        99..100,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        NonLogicalNewline,
        100..101,
    ),
    (
        Name(
            Name("b"),
        ),
        109..110,
    ),
    (
        NonLogicalNewline,
        110..111,
    ),
    (
        Rbrace,
        111..112,
    ),
    (
        FStringMiddle(
            "__",
        ),
        112..114,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringEnd,
        114..115,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Newline,
        115..116,
    ),
]
```
