crates/sith_python_parser/src/snapshots/python_parser__lexer__tests__line_comment_single_whitespace.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: lex_source(&source)
---
## Tokens
```
[
    (
        Int(
            99232,
        ),
        0..5,
    ),
    (
        Comment,
        7..9,
    ),
    (
        Newline,
        9..9,
    ),
]
```
